# Hybrid-VAE-CNN-for-SHM

./: .gitattributes  .gitignore  CITATION.cff  LICENSE.md  README.md  pyproject.toml  requirements.txt
4DOF/: pyproject.toml  readme.md
4DOF/Data/processed/: run_splits.json  stage1_vae_train_meta.json  stage2_cnn_train_meta.json  vae_threshold.json
4DOF/Data/raw/faults/sensor_fault/bias_x3/: bias_x3.csv
4DOF/Data/raw/faults/sensor_fault/drift_x2/: drift_x2.csv
4DOF/Data/raw/faults/sensor_fault/noise_x4/: noise_x4.csv
4DOF/Data/raw/faults/sensor_fault/spikes_x1/: spikes_x1.csv
4DOF/Data/raw/faults/structural_fault/stiff_red_18pct/: stiff_red_18pct.csv
4DOF/Data/raw/faults/structural_fault/stiff_red_19pct/: stiff_red_19pct.csv
4DOF/Data/raw/faults/structural_fault/stiff_red_30pct/: stiff_red_30pct.csv
4DOF/Data/raw/faults/structural_fault/stiff_red_40pct/: stiff_red_40pct.csv
4DOF/Data/raw/faults/structural_fault/stiff_red_8pct/: stiff_red_8pct.csv
4DOF/Data/raw/faults/structural_fault/stiff_red_9pct/: stiff_red_9pct.csv
4DOF/Data/raw/normal/: normal_seed2025.csv  normal_seed2026.csv  normal_seed2027.csv  normal_seed2028.csv  normal_seed2029.csv  normal_seed2030.csv  normal_seed2031.csv  normal_seed2032.csv  normal_seed2033.csv  normal_seed2034.csv
4DOF/Scripts/: 00_make_run_splits.py  01_generate_normal_runs.py  02_generate_fault_datasets.py  03_train_vae.py  04_vae_thresholding.py  05_train_cnn.py  06_test_full_pipeline.py
4DOF/Scripts/Models/: cnn_model.py  temporal_vae.py
4DOF/Scripts/utils/: simulation_4dof.py  windowing.py
(+102 files in other folders)
