[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hybrid-vae-cnn-for-shm"
version = "0.1.0"
description = "Hybrid Temporal VAE + CNN pipeline for structural health monitoring (SHM)."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Olubunmi Emmanuel Ogunleye"}
]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.10",
  "matplotlib>=3.7",
  "scikit-learn>=1.3",
  "pyyaml>=6.0",
  "torch>=2.1",
  "tqdm>=4.66",
  "joblib>=1.3",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
