[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shm_4dof"
version = "0.1.0"
description = "4DOF two-stage SHM pipeline (VAE gate + CNN diagnosis)"
requires-python = ">=3.10"

[tool.setuptools]
packages = ["Scripts", "Scripts.utils", "Scripts.Models"]
